06-open-policy-agent/04-pod-nolabel.yaml
apiVersion: v1
kind: Pod
metadata:
  name: alpine-nolabel
spec:
  containers:
  - name: alpine
    stdin: true
    tty: true
    image: alpine
