06-open-policy-agent/05-pod-withlabel.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-withlabel
  labels:
    owner: user-00
spec:
  containers:
  - name: nginx
    image: nginx
