06-open-policy-agent/05-pod-wronglabel.yaml
apiVersion: v1
kind: Pod
metadata:
  name: alpine-nolabel
  labels:
    owner: bogd
spec:
  containers:
  - name: alpine
    stdin: true
    tty: true
    image: alpine
