06-open-policy-agent/06-pod-correctlabel.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-correct
  labels:
    owner: user-00.training.sass.ro
spec:
  containers:
  - name: nginx
    image: nginx
