06-open-policy-agent/09-pod-wrongreg.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-wrongreg
  labels:
    owner: user-00.training.sass.ro
spec:
  containers:
  - name: nginx
    image: nginx
