06-open-policy-agent/10-pod-somereg.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web-somereg
  labels:
    owner: user-00.training.sass.ro
spec:
  containers:
  - name: nginx
    image: bogd/go-webserver
