06-open-policy-agent/11-pod-rightreg.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web-rightreg
  labels:
    owner: user-00.training.sass.ro
spec:
  containers:
  - name: web
    image: docker.io/bogd/go-webserver
