06-open-policy-agent/12-mutation-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: alpine-kubectl
  labels:
    owner: user-[.userIdStr].training.sass.ro
spec:
  containers:
  - name: alpine
    image: docker.io/bogd/alpine-kubectl
    stdin: true
    tty: true
