06-open-policy-agent/15-pod-nolabel.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webserver-nolabel
  labels:
    owner: user-00.training.sass.ro
spec:
  containers:
  - name: web
    image: docker.io/bogd/go-webserver
