06-open-policy-agent/16-pod-withlabel.yml
apiVersion: v1
kind: Pod
metadata:
  name: webserver-labeled
  labels:
    owner: user-00.training.sass.ro
    environment: dev
spec:
  containers:
  - name: web
    image: docker.io/bogd/go-webserver
