06-open-policy-agent/98-pod-wrongreg.yaml
apiVersion: v1
kind: Pod
metadata:
  name: alpine-wrongreg
  labels:
    owner: user-00.training.sass.ro
spec:
  containers:
  - name: alpine
    stdin: true
    tty: true
    image: bogd/alpine
